# hdbc-postgresql

./: .gitignore  CHANGELOG.md  COPYRIGHT  HDBC-postgresql.buildinfo.in  HDBC-postgresql.cabal  HDBC-sqlite3.cabal  LICENSE  Makefile  README.md  README.txt  Setup.hs  Setup.lhs  TODO  configure  configure.ac  hdbc-postgresql-helper.c  hdbc-postgresql-helper.h  hdbc-sqlite3-helper.c  hdbc-sqlite3-helper.h  hdbcng-postgresql.cabal  hdbi-postgresql.cabal  hugs-postgresql-helper.c  hugs-postgresql-helper.h  pgtypes.h
Database/HDBC/: PostgreSQL.hs  Sqlite3.hs
Database/HDBC/PostgreSQL/: Connection.hsc  ConnectionImpl.hs  ErrorCodes.hs  Implementation.hs  PTypeConv.hsc  Parser.hs  Statement.hsc  Types.hs  Utils.hsc
Database/HDBC/Sqlite3/: Connection.hs  Statement.hs  Statement.hsc  Types.hs  Utils.hs  Utils.hsc
Database/HDBI/: PostgreSQL.hs
Database/HDBI/PostgreSQL/: Implementation.hs  Parser.hs
debian/: README  README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  hdbc-postgresql-default.ex  hdbc-postgresql.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch.ex
testsrc/: SpecificDB.hs  TestMisc.hs  TestSbasics.hs  TestTime.hs  TestUtils.hs  Testbasics.hs  Tests.hs  puretests.hs  runtests.hs
