Name: HDBC-postgresql
Version: 3.0.0
License: BSD3
Maintainer: Nicolas Wu <nicolas.wu@gmail.com>
Author: John Goerzen
Copyright: Copyright (c) 2005-2011 John Goerzen
license-file: LICENSE
homepage: http://github.com/hdbc/hdbc-postgresql
Category: Database
synopsis: PostgreSQL driver for HDBC
Description: This package provides a PostgreSQL driver for HDBC
Stability: Stable

Build-Type: Custom
Cabal-Version: >=1.8

source-repository head
  type:     git
  location: https://github.com/hdbc/hdbc-postgresql.git



Library
  Exposed-Modules: Database.HDBC.PostgreSQL
                 , Database.HDBC.PostgreSQL.Implementation
                 , Database.HDBC.PostgreSQL.Parser
  Build-Depends: base >= 3 && < 5
               , mtl
               , HDBC >= 3.0.0
               , postgresql-libpq
               , postgresql-simple
               , blaze-builder
               , bytestring
               , text
               , attoparsec
               , safe
               , time
               , old-locale
               , uuid

  if impl(ghc >= 6.9)
    Build-Depends: base >= 4
  Ghc-Options: -Wall

  
test-suite runtests
   type: exitcode-stdio-1.0
   main-is: testsrc/runtests.hs
   other-modules: Database.HDBC.PostgreSQL.Implementation
                , Database.HDBC.PostgreSQL.Parser
   ghc-options:   -Wall -fno-warn-orphans -main-is Runtests
   build-depends:  base >= 3 && < 5
                 , HDBC
                 , convertible
                 , QuickCheck
                 , HUnit
                 , test-framework <= 0.7 
                 , test-framework-quickcheck2
                 , test-framework-hunit
                 , text
                 , attoparsec
                 , time
                 , Decimal
                 , uuid
                 , ieee754
                 , bytestring
                 , quickcheck-assertions
                 , quickcheck-instances
                 , containers
                 , old-locale
                 , blaze-builder
                 , safe
                 , postgresql-simple
                 , postgresql-libpq
                
test-suite puretests
   type: exitcode-stdio-1.0
   main-is: testsrc/puretests.hs
   other-modules: Database.HDBC.PostgreSQL.Implementation
                , Database.HDBC.PostgreSQL.Parser
   ghc-options:   -Wall -fno-warn-orphans -main-is Puretests
   build-depends:  base >= 3 && < 5
                 , HDBC
                 , QuickCheck
                 , HUnit
                 , test-framework <= 0.7 
                 , test-framework-quickcheck2
                 , test-framework-hunit
                 , text
                 , attoparsec
                 , time
                 , uuid
                 , Decimal
                 , bytestring
                 , quickcheck-assertions
                 , quickcheck-instances
                 , derive
                 , old-locale
                 , blaze-builder
                 , safe
                 , postgresql-simple
                 , postgresql-libpq
