Name: HDBC-postgresql
Version: 2.3.2.7
License: BSD3
Maintainer: Nicolas Wu <nicolas.wu@gmail.com>
Author: John Goerzen
Copyright: Copyright (c) 2005-2011 John Goerzen
license-file: LICENSE
extra-source-files: LICENSE, hdbc-postgresql-helper.h,
                    pgtypes_internal.h
                    Makefile,
                    README.txt,
                    testsrc/TestTime.hs
                    CHANGELOG.md
homepage: http://github.com/hdbc/hdbc-postgresql
Category: Database
synopsis: PostgreSQL driver for HDBC
Description: This package provides a PostgreSQL driver for HDBC
Stability: Stable

Build-Type: Custom
Cabal-Version: >=1.8

custom-setup
  setup-depends: Cabal >= 1.8 && < 3.1, base < 5

Flag splitBase
  description: Choose the new smaller, split-up package.
Flag buildtests
  description: Build the executable to run unit tests
  default: False
Flag minTime15
  description: Use time 1.5 or higher.
  default: True

Library
  Exposed-Modules: Database.HDBC.PostgreSQL
  Other-Modules: Database.HDBC.PostgreSQL.Connection,
    Database.HDBC.PostgreSQL.ConnectionImpl,
    Database.HDBC.PostgreSQL.Statement,
    Database.HDBC.PostgreSQL.Types,
    Database.HDBC.PostgreSQL.Utils,
    Database.HDBC.PostgreSQL.Parser,
    Database.HDBC.PostgreSQL.PTypeConv,
    Database.HDBC.PostgreSQL.ErrorCodes
  Extensions: ExistentialQuantification, ForeignFunctionInterface
  Build-Depends: base >= 3 && < 5, mtl, HDBC>=2.2.0, parsec, utf8-string,
                 bytestring, old-time, convertible
  if flag(minTime15)
    Build-Depends: time >= 1.5 && < 1.10
    CPP-Options: -DMIN_TIME_15
  else
    Build-Depends: time < 1.5, old-locale
  if impl(ghc >= 6.9)
    Build-Depends: base >= 4
  Extra-Libraries: pq
  C-Sources: hdbc-postgresql-helper.c
  Include-Dirs: .
  GHC-Options: -O2 -Wall

Executable runtests
   if flag(buildtests)
      Buildable: True
      Build-Depends: HUnit, QuickCheck, testpack, containers,
                     convertible, parsec, utf8-string,
                     bytestring, old-time, base >= 4.6 && < 5.0, HDBC>=2.2.6
      if flag(minTime15)
        Build-Depends: time >= 1.5 && < 1.9
        CPP-Options: -DMIN_TIME_15
      else
        Build-Depends: time < 1.5, old-locale
   else
      Buildable: False
   Main-Is: runtests.hs
   Other-Modules: Database.HDBC.PostgreSQL.Connection,
                  Database.HDBC.PostgreSQL.ConnectionImpl,
                  Database.HDBC.PostgreSQL.Statement,
                  Database.HDBC.PostgreSQL.Types,
                  Database.HDBC.PostgreSQL.Utils,
                  Database.HDBC.PostgreSQL.Parser,
                  Database.HDBC.PostgreSQL.PTypeConv,
                  Database.HDBC.PostgreSQL.ErrorCodes,
                  SpecificDB,
                  SpecificDBTests,
                  TestMisc,
                  TestSbasics,
                  TestUtils,
                  Testbasics,
                  Tests
   C-Sources: hdbc-postgresql-helper.c
   include-dirs: .
   Extra-Libraries: pq
   Hs-Source-Dirs: ., testsrc
   GHC-Options: -O2
   Extensions: ExistentialQuantification,
               ForeignFunctionInterface

source-repository head
  type:     git
  location: https://github.com/hdbc/hdbc-postgresql.git
