Name: HDBC-postgresql
Version: 2.5.0.1
License: BSD3
Maintainer: Nicolas Wu <nicolas.wu@gmail.com>
Author: John Goerzen
Copyright: Copyright (c) 2005-2011 John Goerzen
license-file: LICENSE
extra-source-files: LICENSE
                    pgtypes_internal.h
                    Makefile
                    README.txt
                    testsrc/TestTime.hs
                    CHANGELOG.md
homepage: http://github.com/hdbc/hdbc-postgresql
Category: Database
synopsis: PostgreSQL driver for HDBC
Description: This package provides a PostgreSQL driver for HDBC
Stability: Stable

Build-Type: Custom
Cabal-Version: >=1.10

custom-setup
  setup-depends: Cabal >= 1.8, base < 5

Flag splitBase
  description: Choose the new smaller, split-up package.
Flag buildtests
  description: Build the executable to run unit tests
  default: False
Flag minTime15
  description: Use time 1.5 or higher.
  default: True

Library
  Exposed-Modules: Database.HDBC.PostgreSQL
  Other-Modules: Database.HDBC.PostgreSQL.Connection,
    Database.HDBC.PostgreSQL.ConnectionImpl,
    Database.HDBC.PostgreSQL.Statement,
    Database.HDBC.PostgreSQL.Types,
    Database.HDBC.PostgreSQL.Utils,
    Database.HDBC.PostgreSQL.Parser,
    Database.HDBC.PostgreSQL.PTypeConv,
    Database.HDBC.PostgreSQL.ErrorCodes
  Build-Depends: base >= 3 && < 5, mtl, HDBC>=2.2.0, parsec, utf8-string,
                 bytestring, old-time, convertible
  if flag(minTime15)
    Build-Depends: time >= 1.5 && < 1.14
    CPP-Options: -DMIN_TIME_15
  else
    Build-Depends: time < 1.5, old-locale
  if impl(ghc >= 6.9)
    Build-Depends: base >= 4
  Extra-Libraries: pq
  Include-Dirs: .
  GHC-Options: -O2 -Wall
  Default-Language: Haskell2010

Executable runtests
   if flag(buildtests)
      Buildable: True
      Build-Depends: HUnit, QuickCheck, containers,
                     convertible, parsec, utf8-string,
                     bytestring, old-time, base >= 4.6 && < 5.0, HDBC>=2.2.6
      if flag(minTime15)
        Build-Depends: time >= 1.5 && < 1.14
        CPP-Options: -DMIN_TIME_15
      else
        Build-Depends: time < 1.5, old-locale
   else
      Buildable: False
   Main-Is: runtests.hs
   Other-Modules: Database.HDBC.PostgreSQL.Connection,
                  Database.HDBC.PostgreSQL.ConnectionImpl,
                  Database.HDBC.PostgreSQL.Statement,
                  Database.HDBC.PostgreSQL.Types,
                  Database.HDBC.PostgreSQL.Utils,
                  Database.HDBC.PostgreSQL.Parser,
                  Database.HDBC.PostgreSQL.PTypeConv,
                  Database.HDBC.PostgreSQL.ErrorCodes,
                  SpecificDB,
                  SpecificDBTests,
                  TestMisc,
                  TestSbasics,
                  TestUtils,
                  Testbasics,
                  Tests
   include-dirs: .
   Extra-Libraries: pq
   Hs-Source-Dirs: ., testsrc
   GHC-Options: -O2 -threaded
   Default-Language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/hdbc/hdbc-postgresql.git
