Extra-Libraries: sqlite3
Name: HDBC-sqlite3
Version: 0.5.0
License: LGPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2005 John Goerzen
Exposed-Modules: Database.HDBC.Sqlite3
Other-Modules: Database.HDBC.Sqlite3.Connection,
 Database.HDBC.Sqlite3.Statement,
 Database.HDBC.Sqlite3.Types,
 Database.HDBC.Sqlite3.Utils
--Extensions: ExistentialQuantification, AllowOverlappingInstances,
--    AllowUndecidableInstances, CPP
-- CPP extension is really only needed in FiniteMap.hs and Rfc2821.hs
C-Sources: hdbc-sqlite3-helper.c
Build-Depends: base, mtl, HDBC
GHC-Options: -O2 -fglasgow-exts
CC-Options: -I.
