Name: hdbi-postgresql
Version: 1.0.0
License: BSD3
Maintainer: Aleksey Uymanov <s9gf4ult@gmail.com>
Author: John Goerzen
Copyright: Copyright (c) 2005-2013 John Goerzen
license-file: LICENSE
homepage: https://github.com/s9gf4ult/hdbi-postgresql
Category: Database
synopsis: PostgreSQL driver for hdbi
Description: This package provides a PostgreSQL driver for hdbi
Stability: experimental

Build-Type: Simple
Cabal-Version: >=1.8

source-repository head
  type:     git
  location: https://github.com/s9gf4ult/hdbi-postgresql.git

Library
  Exposed-Modules: Database.HDBI.PostgreSQL
                 , Database.HDBI.PostgreSQL.Implementation
                 , Database.HDBI.PostgreSQL.Parser
  Build-Depends: base >= 3 && < 5
               , attoparsec
               , blaze-builder
               , bytestring
               , hdbi >= 1.0.0
               , mtl
               , old-locale
               , postgresql-libpq
               , postgresql-simple
               , safe
               , text
               , time
               , uuid

  if impl(ghc >= 6.9)
    Build-Depends: base >= 4
  Ghc-Options: -Wall
  ghc-prof-options: -auto-all


test-suite runtests
   type: exitcode-stdio-1.0
   main-is: testsrc/runtests.hs
   other-modules: Database.HDBI.PostgreSQL.Implementation
                , Database.HDBI.PostgreSQL.Parser

   ghc-options:   -Wall -fno-warn-orphans -main-is Runtests
   build-depends:  base >= 3 && < 5
                 , Decimal
                 , HUnit
                 , QuickCheck
                 , attoparsec
                 , blaze-builder
                 , bytestring
                 , containers
                 , hdbi >= 1.0.0
                 , ieee754
                 , mtl
                 , old-locale
                 , postgresql-libpq
                 , postgresql-simple
                 , quickcheck-assertions
                 , quickcheck-instances
                 , safe
                 , test-framework <= 0.7
                 , test-framework-hunit
                 , test-framework-quickcheck2
                 , text
                 , time
                 , uuid


test-suite puretests
   type: exitcode-stdio-1.0
   main-is: testsrc/puretests.hs
   other-modules: Database.HDBI.PostgreSQL.Implementation
                , Database.HDBI.PostgreSQL.Parser

   ghc-options:   -Wall -fno-warn-orphans -main-is Puretests
   build-depends:  base >= 3 && < 5
                 , Decimal
                 , HUnit
                 , QuickCheck
                 , attoparsec
                 , blaze-builder
                 , bytestring
                 , derive
                 , hdbi >= 1.0.0
                 , mtl
                 , old-locale
                 , postgresql-libpq
                 , postgresql-simple
                 , quickcheck-assertions
                 , quickcheck-instances
                 , safe
                 , test-framework <= 0.7
                 , test-framework-hunit
                 , test-framework-quickcheck2
                 , text
                 , time
                 , uuid
